yamls/ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui
    version: v1
  name: ui
spec:
  selector:
    matchLabels:
      app: ui
      version: v1
  template:
    metadata:
      labels:
        app: ui
        version: v1
    spec:
      containers:
        - image: registry-service.private-registry.svc.cluster.local:5000/tekton-argocd/app:04d1ed8
          imagePullPolicy: Always
          name: ui
          ports:
            - containerPort: 3000
