yamls/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ui
  name: ui
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: ui
